# grab-stock-bigdata

./: Cargo.toml  README.md  config.toml  sql
examples/: load_stock_base_info.rs  pull_all_month_data_from_tencent.rs  pull_earliest_week_data_from_tencent_to_postgre.rs  pull_lastest_week_data_from_tencent_to_postgre.rs  test_conn_postgre.rs  test_conn_postgre_1.rs  test_conn_postgre_async.rs  test_pull_tencent_month_data.rs  test_save_month_data.rs
src/entity/: mod.rs  monthly_data.rs  stock_base_data.rs  weekly_data.rs
src/utils/: db_source.rs  mod.rs  system.rs
