[package]
name = "grab-stock-bigdata"
version = "0.1.0"
authors = ["firebird"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"]}
toml = "0.5.5"
rustc-serialize = "0.3.18"
mysql = "18.0.0"
#serde = "1.0.104"
serde = { version = "1.0.104", features = ["derive"] }
#serde_json = "1.0.41"
hyper = "0.13"
hyper-tls = "0.4.1"
[dependencies.educe]
version = "*"
features = ["Debug", "Default", "Hash", "Clone", "Copy"]
default-features = false